# arquivo-censurado

./: README.md
chrome-extension/: README.md  contentScript.js  manifest.json
chrome-extension/lib/: events.js  index.js  morph.js
chrome-extension/popup/: popup.css  popup.html  popup.js
package/: .gitignore  README.md  pyproject.toml
package/api/: .dockerignore  .env.example  Dockerfile  main.py
package/src/arquivo_pt/: utils.py
package/src/arquivo_pt/censor/: Censor.py
package/src/arquivo_pt/censor/strategies/: DummyCensor.py  LLMCensor.py  Strategy.py
package/src/arquivo_pt/censor/strategies/llm_strategies/: DeepseekStrategy.py  GPTStrategy.py  GeminiStrategy.py  LLMStrategyFactory.py  __init__.py
package/src/arquivo_pt/dto/: DTO.py
package/src/arquivo_pt/dto/requests/: CensorRequest.py
package/src/arquivo_pt/dto/responses/: CensorResponse.py
package/src/arquivo_pt/prompts/: PromptFactory.py
package/tests/integration/: fixture.py  test_html.py  test_simple.py
package/tests/unit/: test_dummy.py
web/: .env.production  .gitignore  Dockerfile  README.md  dev.Dockerfile  dev.docker-compose.yml  package-lock.json  package.json  setup.Dockerfile  setup.docker-compose.yml
web/public/: diagrama-arquivo-censurado.drawio  index.html  manifest.json
web/src/: App.jsx  index.js
web/src/assets/css/: index.css
web/src/assets/db/: extensions.jsx  news.jsx
web/src/components/: ButtonExtension.jsx  DashDivider.jsx  LinkWithDash.jsx  NewsCard.jsx  NewsGrid.jsx
web/src/pages/: About.jsx  FAQ.jsx  Home.jsx  NotFound.jsx
(+3 files in other folders)
